# junk-finder

./: .gitignore  README.md  manage.py  pyproject.toml  secrets.py
api/: serializers.py  urls.py  views.py
junkapp/: admin.py  apps.py  forms.py  models.py  urls.py  view_helper.py  views.py
junkapp/management/commands/: bootstrap_data.py
junkapp/migrations/: 0001_initial.py  0002_auto_20200716_2232.py
junkapp/templates/: 404.html  500.html  category.html  forms.html  header.html  home.html  item_detail.html  login.html  post_item_form.html  signup.html
junkfinder/: asgi.py  settings.py  urls.py  wsgi.py
