[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Tiffany McLean <tamclean324@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-phone-field = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
