[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Tiffany McLean <tamclean324@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-environ = "^0.4.5"
pillow = "^7.2.0"
django-phonenumber-field = "^4.0.0"
djangorestframework = "^3.11.0"
phonenumbers = "^8.12.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
